--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
-Hello world check out my homepage!
+<!DOCTYPE html>
+<html> <!-- Start building main website -->
+  <head>
+
+		<title>A-Foot Podiatry & Chiropody</title> </head>
+		<link rel="shortcut icon" href="/static/img/favicon.png" />
+		<link href="/Users/clementvenard/Documents/AFootPodiatry/About.css" type="text/css"
+     		 rel="stylesheet" />
+		<meta name="keywords" content="Podiatrist, Chiropodist, Foot, Pain, Hull, Beverley, East Yorkshire, Humberside" />
 
 
-----------------------------
-http://clem109.github.io
+<body bgcolor="#DBD1C8">
+	<h1 style="margin-bottom:0; margin-top:0;">  A:FOOT </h1>
+	<h2 style="margin-top:0;"> <img id="foot" src="Images/foot.png" />Podiatry & Chiropody </h2>
+
+<table align="center">
+	<th> <a href="Basic.html">HOME<a></th>
+	<th ><a href="About.html">ABOUT<a></th> 
+	<th><a href="FootCare.html">FOOT CARE<a></th> 
+	<th><a href="Prices.html">PRICES<a></th>
+	<th><a href="Contact.html">CONTACT<a></th>
+	<th></th>
+</table>
+
+
+<!-- This part of the code will be the same on all the pages -->
+<br><br><br><br>
+
+
+</html>  <!-- end code -->
